--- a/web-security/src/main/resources/application.properties
+++ b/web-security/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=web-security
+server.port=8443
+server.ssl.key-store=classpath:server.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=PKCS12
+
