--- a/web-security/src/main/resources/application.properties
+++ b/web-security/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.ssl.key-store=classpath:server.p12
 server.ssl.key-store-password=password
 server.ssl.key-store-type=PKCS12
 logging.level.org.springframework.security=TRACE
+
+rsa.private-key=classpath:pki/private.pem
+rsa.public-key=classpath:pki/public.pem
