add github oauth2 login

--- a/web-security/src/main/resources/application.properties
+++ b/web-security/src/main/resources/application.properties
@@ -1,21 +1,20 @@
 spring.application.name=web-security
-server.port=8443
-server.ssl.key-store=classpath:server.p12
-server.ssl.key-store-password=password
-server.ssl.key-store-type=PKCS12
+#server.port=8443
+#server.ssl.key-store=classpath:server.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-store-type=PKCS12
 logging.level.org.springframework.security=TRACE
 
 rsa.private-key=classpath:pki/private.pem
 rsa.public-key=classpath:pki/public.pem
 
 
-# OAuth2 Client Configuration
-spring.security.oauth2.client.registration.google.client-id=your-client-id
-spring.security.oauth2.client.registration.google.client-secret=your-client-secret
+## OAuth2 Client Configuration
+spring.security.oauth2.client.registration.google.client-id=941991647916-8r2qk499tte71rj07ld8gg1vf12hvt9b.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
+spring.security.oauth2.client.registration.github.client-id=Ov23liW7XKW8JRYExn1o
+spring.security.oauth2.client.registration.github.client-secret=1ad8f61d194e136888e17a7e56e05f3aa2c40087
 
-# JWT Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://your-issuer-uri.com
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://your-issuer-uri.com/.well-known/jwks.json
 
