add security lab4 documentation

--- a/web-security/src/main/resources/application.properties
+++ b/web-security/src/main/resources/application.properties
@@ -10,11 +10,6 @@ rsa.public-key=classpath:pki/public.pem
 
 
 ## OAuth2 Client Configuration
-spring.security.oauth2.client.registration.google.client-id=941991647916-8r2qk499tte71rj07ld8gg1vf12hvt9b.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
-
-spring.security.oauth2.client.registration.github.client-id=Ov23liW7XKW8JRYExn1o
-spring.security.oauth2.client.registration.github.client-secret=1ad8f61d194e136888e17a7e56e05f3aa2c40087
 
 
+##insert google and github client id/secret for oauth
