--- a/spring-data/src/main/resources/application.properties
+++ b/spring-data/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.application=TRACE
+
+
