add mongodb integration

--- a/spring-data/src/main/resources/application.properties
+++ b/spring-data/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.data.mongodb.uri=mongodb+srv://dennisowusu:HnKxh7hRkwAr80YU@spring-boot.igl72.mongodb.net/doctors
+spring.data.mongodb.database=doctors
+
+
